# lz4_stream

./: CMakeLists.txt
cmake/: Config.cmake.in
